--- a/source/index.jade
+++ b/source/index.jade
@@ -5,6 +5,8 @@ block title
   
 block banner
   include ./components/gallery-banner/template
+  
+  include ./modules/forms/banner
 
 block content
 
