--- a/source/components/gallery-banner/style.styl
+++ b/source/components/gallery-banner/style.styl
@@ -34,6 +34,10 @@
 
 .b-impression-block
 
+  .b-forms
+    background-color rgba( 255,255,255,.9 )
+    pointer-events none
+
   .fotorama
     width 100%
 
