--- a/source/modules/forms/style.styl
+++ b/source/modules/forms/style.styl
@@ -1,7 +1,57 @@
 .b-forms
-  margin-left -15px
-  margin-right -15px
   background-color #fff
+
+  .container &
+    margin-left -15px
+    margin-right -15px
+  
+  //&__bg
+  
+  &__container
+    display flex
+    align-items center
+    position relative
+    padding-top 70px
+    padding-bottom 70px
+    
+    &.i-show
+    
+      .b-forms__image,
+      .container
+        opacity 1
+        
+    .container
+      z-index 2
+      
+  &__sq
+    background rgba( 255,255,255,.9 )
+    margin-left -15px
+    margin-right -15px
+    
+    @media ( max-width: 767px )
+      margin-left 0
+      margin-right 0
+      
+  &__image
+    display block
+    position absolute
+    top 0
+    left 0
+    width 100%
+    height 100%
+    background-repeat no-repeat
+    background-position center
+    background-size cover
+    opacity 0
+    transition( opacity 0.5s ease )
+    z-index 1
+  
+  h2
+    color #333
+    
+    @media ( max-width: 767px )
+      padding-left 15px
+      padding-right 15px
   
   >.row.i-unstyled
     margin-left 0
