--- a/source/components/forms/style.styl
+++ b/source/components/forms/style.styl
@@ -5,6 +5,10 @@
   margin-right -15px
   background-color #fff
   
+  &.i-bg
+    margin-left 0
+    margin-right 0
+  
   >.row.i-unstyled
     margin-left 0
     margin-right 0
