--- a/source/index.jade
+++ b/source/index.jade
@@ -7,6 +7,8 @@ block banner
   include ./components/gallery-banner/template
   
   include ./modules/forms/banner
+  
+  include ./modules/forms/template
 
 block content
 
