--- a/source/modules/forms/banner.jade
+++ b/source/modules/forms/banner.jade
@@ -1,4 +1,4 @@
-﻿.b-forms
+﻿.b-forms.i-bg
   .b-forms__bg( style="background-image: url(/components/gallery-banner/preloader.svg)" )
     .b-forms__container
       a.b-forms__image( href="" data-image="http://s.fotorama.io/1.jpg" )
