--- a/markup/components/announcement.111/template.html
+++ b/markup/components/announcement.111/template.html
@@ -1,6 +1,6 @@
 
 <!-- start /components/announcement.111/-->
-<div class="b-announcement-111 b-announcement">
+<div class="b-announcement-111 b-announcement i-slide-top-animation">
   <div class="row">
     <div class="col-sm-4">
       <div data-original="/upload/banner2.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
@@ -10,7 +10,7 @@
         <div class="b-announcement__price">
           от
            <span class="b-announcement__price__num">266 800 руб.</span>
-        </div></a>
+        </div></a><a href="" class="btn btn-large">Посмотреть</a>
     </div>
     <div class="col-sm-4">
       <div data-original="/upload/banner3.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
@@ -20,7 +20,7 @@
         <div class="b-announcement__price">
           от
            <span class="b-announcement__price__num">106 800 руб.</span>
-        </div></a>
+        </div></a><a href="" class="btn btn-large">Посмотреть</a>
     </div>
     <div class="col-sm-4">
       <div data-original="/upload/banner4.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
@@ -30,7 +30,7 @@
         <div class="b-announcement__price">
           от
            <span class="b-announcement__price__num">466 800 руб.</span>
-        </div></a>
+        </div></a><a href="" class="btn btn-large">Посмотреть</a>
     </div>
   </div>
 </div>
