--- a/markup/components/announcement.12/template.html
+++ b/markup/components/announcement.12/template.html
@@ -1,26 +1,26 @@
 
 <!-- start /components/announcement.12/-->
-<div class="b-announcement-12 b-announcement">
+<div class="b-announcement-12 b-announcement i-slide-top-animation">
   <div class="row">
     <div class="col-sm-4">
       <div data-original="/upload/banner3.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-        <div class="b-announcement__section">Старушка Европа</div>
-        <div class="b-announcement__title">Увидеть Париж</div>
-        <div class="b-announcement__type">Прогулки по летнему Парижу</div>
+        <div class="b-announcement__section">Турция</div>
+        <div class="b-announcement__title">Ичмелер. Hotel Aqua 5* </div>
+        <div class="b-announcement__type"></div>
         <div class="b-announcement__price">
           от
-           <span class="b-announcement__price__num">76 900 руб.</span>
-        </div></a>
+           <span class="b-announcement__price__num">129 700 руб.</span>
+        </div></a><a href="" class="btn btn-large">Подробнее</a>
     </div>
     <div class="col-sm-8">
       <div data-original="/upload/banner2.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-        <div class="b-announcement__section">Сказка</div>
-        <div class="b-announcement__title">Северное сияние в Исландии</div>
-        <div class="b-announcement__type">Туры с авиаперелетом</div>
+        <div class="b-announcement__section">Индонезия</div>
+        <div class="b-announcement__title">Бали. Fontana Hotel 4* </div>
+        <div class="b-announcement__type">Двухнедельный тур на остров Бали с прямым авиаперелетом.</div>
         <div class="b-announcement__price">
           от
-           <span class="b-announcement__price__num">466 800 руб.</span>
-        </div></a>
+           <span class="b-announcement__price__num">346 000 руб.</span>
+        </div></a><a href="" class="btn btn-large">Подробнее</a>
     </div>
   </div>
 </div>
