--- a/markup/components/announcement.21/template.html
+++ b/markup/components/announcement.21/template.html
@@ -1,26 +1,26 @@
 
 <!-- start /components/announcement.21/-->
-<div class="b-announcement-21 b-announcement">
+<div class="b-announcement-21 b-announcement i-slide-top-animation">
   <div class="row">
     <div class="col-sm-8">
       <div data-original="/upload/banner6.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-        <div class="b-announcement__section">Старушка Европа</div>
-        <div class="b-announcement__title">Увидеть Париж</div>
-        <div class="b-announcement__type">Прогулки по летнему Парижу</div>
+        <div class="b-announcement__section">Греция</div>
+        <div class="b-announcement__title">Корфу. Athina. 3* </div>
+        <div class="b-announcement__type">Отдых на Адриатическом море 2 недели с авиаперелетом, отелем, трансферо...</div>
         <div class="b-announcement__price">
           от
-           <span class="b-announcement__price__num">76 900 руб.</span>
-        </div></a>
+           <span class="b-announcement__price__num">48 900 руб.</span>
+        </div></a><a href="" class="btn btn-large">Подробнее</a>
     </div>
     <div class="col-sm-4">
       <div data-original="/upload/banner5.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-        <div class="b-announcement__section">Сказка</div>
-        <div class="b-announcement__title">Северное сияние в Исландии</div>
-        <div class="b-announcement__type">Туры с авиаперелетом</div>
+        <div class="b-announcement__section">Италия</div>
+        <div class="b-announcement__title">Бордигера. Grand hotel del mare 5* </div>
+        <div class="b-announcement__type">Недельный тур с проживанием с проживанием в 5* отеле на первой линии Ад...</div>
         <div class="b-announcement__price">
           от
-           <span class="b-announcement__price__num">466 800 руб.</span>
-        </div></a>
+           <span class="b-announcement__price__num">49 700 руб.</span>
+        </div></a><a href="" class="btn btn-large">Подробнее</a>
     </div>
   </div>
 </div>
