--- a/markup/components/announcement.3/template.html
+++ b/markup/components/announcement.3/template.html
@@ -1,6 +1,6 @@
 
 <!-- start /components/announcement.3/-->
-<div class="b-announcement-3 b-announcement">
+<div class="b-announcement-3 b-announcement i-slide-top-animation">
   <div class="row">
     <div class="col-sm-12">
       <div data-original="/upload/banner1.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
@@ -10,7 +10,7 @@
         <div class="b-announcement__price">
           от
            <span class="b-announcement__price__num">76 900 руб.</span>
-        </div></a>
+        </div></a><a href="" class="btn btn-large">Посмотреть</a>
     </div>
   </div>
 </div>
