--- a/markup/components/gallery-banner/template.html
+++ b/markup/components/gallery-banner/template.html
@@ -10,7 +10,7 @@
       <div class="b-impression-block__container"><a href="" data-image="http://s.fotorama.io/1.jpg" class="b-impression-block__image"></a>
         <div class="container">
           <h2 class="b-h1">Хевиз</h2>
-          <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро, которое стремятся посетить гости из Европы и России.<br/><b class="b-impression-block__price">от 480 €</b></p>
+          <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное термальное озеро, которое стремятся посетить гости из Европы и России.<br/><b class="b-impression-block__price">от 480 €</b><span href="" class="btn btn-large">Посмотреть</span></p>
         </div>
       </div>
     </div>
@@ -19,7 +19,7 @@
         <div data-image="http://s.fotorama.io/2.jpg" class="b-impression-block__image"></div>
         <div class="container">
           <h2 class="b-h1">Хевиз</h2>
-          <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро.<br/><b class="b-impression-block__price">от 1 480 €</b></p>
+          <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное термальное озеро.<br/><b class="b-impression-block__price">от 1 480 €</b><span href="" class="btn btn-large">Посмотреть</span></p>
         </div>
       </div>
     </div>
@@ -28,7 +28,7 @@
         <div data-image="http://s.fotorama.io/3.jpg" class="b-impression-block__image"></div>
         <div class="container">
           <h2 class="b-h1">Венгрия</h2>
-          <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро.<br/><b class="b-impression-block__price">от 1 480 €</b></p>
+          <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное термальное озеро.<br/><b class="b-impression-block__price">от 1 480 €</b><span href="" class="btn btn-large">Посмотреть</span></p>
         </div>
       </div>
     </div>
