--- a/markup/components/tours.12/template.html
+++ b/markup/components/tours.12/template.html
@@ -1,6 +1,6 @@
 
 <!-- start /components/tours.12/-->
-<div class="b-tours-12 b-tours">
+<div class="b-tours-12 b-tours i-slide-top-animation">
   <div class="row">
     <div class="col-sm-4">
       <div data-original="/upload/banner3.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в крым</a>
