--- a/markup/components/tours.21/template.html
+++ b/markup/components/tours.21/template.html
@@ -1,6 +1,6 @@
 
 <!-- start /components/tours.21/-->
-<div class="b-tours-21 b-tours">
+<div class="b-tours-21 b-tours i-slide-top-animation">
   <div class="row">
     <div class="col-sm-8">
       <div data-original="/upload/banner6.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
