--- a/source/components/announcement.111/template.jade
+++ b/source/components/announcement.111/template.jade
@@ -1,6 +1,6 @@
 ﻿// start /components/announcement.111/
 
-.b-announcement-111.b-announcement
+.b-announcement-111.b-announcement.i-slide-top-animation
   
   .row
     .col-sm-4
@@ -12,6 +12,7 @@
         .b-announcement__price от
           | 
           span.b-announcement__price__num 266 800 руб.
+      a.btn.btn-large( href="" ) Посмотреть
           
     .col-sm-4
       .b-announcement__image( data-original="/upload/banner3.jpg" )
@@ -22,6 +23,7 @@
         .b-announcement__price от
           | 
           span.b-announcement__price__num 106 800 руб.
+      a.btn.btn-large( href="" ) Посмотреть
           
     .col-sm-4
       .b-announcement__image( data-original="/upload/banner4.jpg" )
@@ -32,5 +34,6 @@
         .b-announcement__price от
           | 
           span.b-announcement__price__num 466 800 руб.
+      a.btn.btn-large( href="" ) Посмотреть
 
 // end /components/announcement.111/
