--- a/source/components/announcement.12/template.jade
+++ b/source/components/announcement.12/template.jade
@@ -1,26 +1,28 @@
 ﻿// start /components/announcement.12/
 
-.b-announcement-12.b-announcement
+.b-announcement-12.b-announcement.i-slide-top-animation
   
   .row
     .col-sm-4
       .b-announcement__image( data-original="/upload/banner3.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
-        .b-announcement__section Старушка Европа
-        .b-announcement__title Увидеть Париж
-        .b-announcement__type Прогулки по летнему Парижу
+        .b-announcement__section Турция
+        .b-announcement__title Ичмелер. Hotel Aqua 5* 
+        .b-announcement__type
         .b-announcement__price от
           | 
-          span.b-announcement__price__num 76 900 руб.
+          span.b-announcement__price__num 129 700 руб.
+      a.btn.btn-large( href="" ) Подробнее
           
     .col-sm-8
       .b-announcement__image( data-original="/upload/banner2.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
-        .b-announcement__section Сказка
-        .b-announcement__title Северное сияние в Исландии
-        .b-announcement__type Туры с авиаперелетом
+        .b-announcement__section Индонезия
+        .b-announcement__title Бали. Fontana Hotel 4* 
+        .b-announcement__type Двухнедельный тур на остров Бали с прямым авиаперелетом.
         .b-announcement__price от
           | 
-          span.b-announcement__price__num 466 800 руб.
+          span.b-announcement__price__num 346 000 руб.
+      a.btn.btn-large( href="" ) Подробнее
           
 // end /components/announcement.12/
