--- a/source/components/announcement.21/template.jade
+++ b/source/components/announcement.21/template.jade
@@ -1,26 +1,28 @@
 ﻿// start /components/announcement.21/
 
-.b-announcement-21.b-announcement
+.b-announcement-21.b-announcement.i-slide-top-animation
   
   .row
     .col-sm-8
       .b-announcement__image( data-original="/upload/banner6.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
-        .b-announcement__section Старушка Европа
-        .b-announcement__title Увидеть Париж
-        .b-announcement__type Прогулки по летнему Парижу
+        .b-announcement__section Греция
+        .b-announcement__title Корфу. Athina. 3* 
+        .b-announcement__type Отдых на Адриатическом море 2 недели с авиаперелетом, отелем, трансферо...
         .b-announcement__price от
           | 
-          span.b-announcement__price__num 76 900 руб.
+          span.b-announcement__price__num 48 900 руб.
+      a.btn.btn-large( href="" ) Подробнее
           
     .col-sm-4
       .b-announcement__image( data-original="/upload/banner5.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
-        .b-announcement__section Сказка
-        .b-announcement__title Северное сияние в Исландии
-        .b-announcement__type Туры с авиаперелетом
+        .b-announcement__section Италия
+        .b-announcement__title Бордигера. Grand hotel del mare 5* 
+        .b-announcement__type Недельный тур с проживанием с проживанием в 5* отеле на первой линии Ад...
         .b-announcement__price от
           | 
-          span.b-announcement__price__num 466 800 руб.
+          span.b-announcement__price__num 49 700 руб.
+      a.btn.btn-large( href="" ) Подробнее
 
 // end /components/announcement.21/
