--- a/source/components/announcement.3/template.jade
+++ b/source/components/announcement.3/template.jade
@@ -1,6 +1,6 @@
 ﻿// start /components/announcement.3/
 
-.b-announcement-3.b-announcement
+.b-announcement-3.b-announcement.i-slide-top-animation
   
   .row
     .col-sm-12
@@ -12,5 +12,6 @@
         .b-announcement__price от
           | 
           span.b-announcement__price__num 76 900 руб.
+      a.btn.btn-large( href="" ) Посмотреть
 
 // end /components/announcement.3/
