--- a/source/components/forms/style.styl
+++ b/source/components/forms/style.styl
@@ -27,7 +27,7 @@
   &-menu
     width 24px
     height 24px
-    background embedurl( 'img/menu.png' ) no-repeat center center
+    background embedurl( 'img/menu-icon.svg' ) no-repeat center center
     
     a.active &
       background-image embedurl( 'img/menu-active.png' )
@@ -80,7 +80,6 @@
 
   &__tab
     padding 15px
-    display flex
       
     @media ( max-width: 380px )
       //padding 0
