--- a/source/components/gallery-banner/template.jade
+++ b/source/components/gallery-banner/template.jade
@@ -15,26 +15,29 @@ script( src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js" )
         a.b-impression-block__image( href="" data-image="http://s.fotorama.io/1.jpg" )
         .container
           h2.b-h1 Хевиз
-          p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро, которое стремятся посетить гости из Европы и России.
+          p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное термальное озеро, которое стремятся посетить гости из Европы и России.
             br
             b.b-impression-block__price от 480 €
+            span.btn.btn-large( href="" ) Посмотреть
       
     div.b-impression-block__frame( style="background-image: url(/components/gallery-banner/preloader.svg)" )
       .b-impression-block__container
         .b-impression-block__image( data-image="http://s.fotorama.io/2.jpg" )
         .container
           h2.b-h1 Хевиз
-          p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро.
+          p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное термальное озеро.
             br
             b.b-impression-block__price от 1 480 €
+            span.btn.btn-large( href="" ) Посмотреть
       
     div.b-impression-block__frame( style="background-image: url(/components/gallery-banner/preloader.svg)" )
       .b-impression-block__container
         .b-impression-block__image( data-image="http://s.fotorama.io/3.jpg" )
         .container
           h2.b-h1 Венгрия
-          p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро.
+          p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное термальное озеро.
             br
             b.b-impression-block__price от 1 480 €
+            span.btn.btn-large( href="" ) Посмотреть
 
 // end /components/gallery-banner/
