--- a/source/gui/index.jade
+++ b/source/gui/index.jade
@@ -5,8 +5,25 @@ block title
 
 block content
 
+  hr.unstyled
+
   .row
     .col-sm-8.col-sm-offset-2
+    
+      h1 Buttons
+      
+      .btn.btn-large Large button
+      .btn.btn-small Small button
+      
+      h1
+        span Button inside heading
+        .btn.btn-small The button
+        
+      h1.b-relative
+        .b-heading-icon( style="background-image: url( '/template/images/instagram.svg' );" )
+        | An icon before heading
+        
+      hr
   
       h1 Туристическая компания
       
