--- a/source/modules/forms/style.styl
+++ b/source/modules/forms/style.styl
@@ -1,9 +1,9 @@
 .b-forms
   background-color #fff
 
-  .container &
+  /*.container &
     margin-left -15px
-    margin-right -15px
+    margin-right -15px*/
   
   //&__bg
   
@@ -125,7 +125,7 @@
 
   &__tab
     padding 15px 30px
-    display flex
+    //display flex
       
     @media ( max-width: 570px )
       padding 15px
