--- a/source/modules/regions/countries.jade
+++ b/source/modules/regions/countries.jade
@@ -1,6 +1,6 @@
 ﻿.b-regions
 
-  .row
+  .row.i-slide-top-animation
     .col-sm-4
       .b-regions__item
         img.b-regions__square( src="/template/images/square.gif" )
@@ -25,7 +25,7 @@
           span.b-regions__name Италия
         span.b-regions__tours 14 туров в Мексику
 
-  .row
+  .row.i-slide-top-animation
     .col-sm-4
       .b-regions__item
         img.b-regions__square( src="/template/images/square.gif" )
@@ -50,7 +50,7 @@
           span.b-regions__name Италия
         span.b-regions__tours 14 туров в Мексику
 
-  .row
+  .row.i-slide-top-animation
     .col-sm-4
       .b-regions__item
         img.b-regions__square( src="/template/images/square.gif" )
@@ -58,6 +58,7 @@
         a( href="country/" )
           span.b-regions__name Канкун
         span.b-regions__tours 14 туров в Мексику
+    hr.i-unstyled.i-size-S.visible-xs-block
     .col-sm-4
       .b-regions__item
         img.b-regions__square( src="/template/images/square.gif" )
@@ -65,6 +66,7 @@
         a( href="country/" )
           span.b-regions__name Акапулько
         span.b-regions__tours 14 туров в Мексику
+    hr.i-unstyled.i-size-S.visible-xs-block
     .col-sm-4
       .b-regions__item
         img.b-regions__square( src="/template/images/square.gif" )
@@ -73,7 +75,7 @@
           span.b-regions__name Италия
         span.b-regions__tours 14 туров в Мексику
 
-  .row
+  .row.i-slide-top-animation
     .col-sm-4
       .b-regions__item
         img.b-regions__square( src="/template/images/square.gif" )
@@ -81,6 +83,7 @@
         a( href="country/" )
           span.b-regions__name Канкун
         span.b-regions__tours 14 туров в Мексику
+    hr.i-unstyled.i-size-S.visible-xs-block
     .col-sm-4
       .b-regions__item
         img.b-regions__square( src="/template/images/square.gif" )
@@ -88,6 +91,7 @@
         a( href="country/" )
           span.b-regions__name Акапулько
         span.b-regions__tours 14 туров в Мексику
+    hr.i-unstyled.i-size-S.visible-xs-block
     .col-sm-4
       .b-regions__item
         img.b-regions__square( src="/template/images/square.gif" )
