--- a/source/modules/regions/style.styl
+++ b/source/modules/regions/style.styl
@@ -79,4 +79,9 @@
     padding-left 35px
     line-height 20px
     z-index 3
-      
+    
+  .row
+    margin-bottom 30px !important
+    
+    @media( max-width 767px )
+      margin-bottom 14px !important
