--- a/markup/components/tours.111/template.html
+++ b/markup/components/tours.111/template.html
@@ -1,6 +1,6 @@
 
 <!-- start /components/tours.111/-->
-<div class="b-tours-111 b-tours">
+<div class="b-tours-111 b-tours i-slide-top-animation">
   <div class="row">
     <div class="col-sm-4">
       <div data-original="/upload/banner2.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
