--- a/source/layouts/includes/styles.jade
+++ b/source/layouts/includes/styles.jade
@@ -1,8 +1,8 @@
 ﻿link( rel="stylesheet", href="/template/bootstrap/css/bootstrap.min.css" )
 
-link( rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css" )
+link( rel="stylesheet" href="/template/materialize.min.css" )
 link( href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" )
 
 link( rel="stylesheet", href="/template/template_styles.css" )
 link( rel="stylesheet", href="/template/colors.css" )
-link( href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=latin,cyrillic' rel='stylesheet' )
+link( href='http://fonts.googleapis.com/css?family=Montserrat:300,400,700&subset=latin,cyrillic' rel='stylesheet' )
