--- a/source/modules/modal/include.jade
+++ b/source/modules/modal/include.jade
@@ -1,17 +1,28 @@
 ﻿#phoneModal.modal
-  a( href="#!" rel="nofollow" ).modal-action.modal-close
-  .modal-content.text-center
-    h2 Связаться с нами
+  .b-phone-modal
+  
+    .b-phone-modal__ill( style="background-image: url( '/upload/phone-modal.jpg' );" )
+    .b-phone-modal__text.text-center
+      .b-phone-modal__cover( style="background-image: url( '/upload/phone-modal.jpg' );" )
     
-    .modal-phones
-      i.b-phone-icon
-      div
-        a( href="tel:+88008090100" rel="nofollow" ) 8 800 80 90 100
-      div
-        a( href="tel:+74953500000" rel="nofollow" ) +7 495 350 00 00
-      div
-        a( href="tel:+74953500000" rel="nofollow" ) +7 495 350 00 00
-    
-    .modal-post
-      i.b-post-icon
-      a( href="/request/" ) Написать нам
+      h2 Связаться с&nbsp;нами
+      
+      .b-phone-modal__address
+        b Наш офис
+        br
+        | Улица Мневники, дом 3,<br>офис 224
+      
+      .b-phone-modal__phones
+        div
+          b
+            a( href="tel:+88008090100" rel="nofollow" ) 8 800 80 90 100
+        div
+          a( href="tel:+74953500000" rel="nofollow" ) +7 495 350 00 00
+        div
+          a( href="tel:+74953500000" rel="nofollow" ) +7 495 350 00 00
+      
+      .b-phone-modal__post
+        a.btn.btn-large( href="/request/" ) Написать нам
+        
+      .b-phone-modal__close
+        a.modal-close( href="" rel="nofollow" ) Закрыть
