--- a/source/modules/modal/style.styl
+++ b/source/modules/modal/style.styl
@@ -108,3 +108,137 @@
     @media( max-width 750px )
       margin-bottom 100px
       font-size 16pt
+      
+//new phone modal
+
+#phoneModal.modal
+  width 730px
+  border-radius 10px
+  background none
+  
+  @media( max-width 767px )
+    width 350px
+    
+.b-phone-modal
+  display flex
+  justify-content space-between
+
+  &:after
+    content ''
+    display block
+    clear both
+
+  &__ill
+    width 50%
+    background-position 0 0
+    background-repeat no-repeat
+    background-size cover
+    
+    @media( max-width 767px )
+      display none
+    
+  &__text
+    width 50%
+    padding 55px 65px 45px
+    background #fff
+    
+    @media( max-width 767px )
+      position relative
+      width 100%
+      
+    @media( max-height 640px )
+      font-size 10.5pt
+      line-height 1.5
+      
+    @media( max-height 540px )
+      padding 25px 30px
+    
+    h2
+      font-size 21pt
+      margin 0 0 35px
+      
+      @media( max-height 740px )
+        margin-bottom 25px
+      
+      @media( max-height 640px )
+        margin-bottom 15px
+        font-size 18pt
+        line-height 1.2
+      
+  &__cover
+    display none
+    
+    @media( max-width 767px )
+      position absolute
+      top 0
+      left 0
+      width 100%
+      height 40%
+      display block
+      background-position 0 bottom
+      background-repeat no-repeat
+      background-size cover
+      opacity .6
+      z-index -1
+      
+  &__phones
+    font-size 10.5pt
+    margin-bottom 40px
+    
+    b
+      font-size 13.5pt
+      
+    a
+      text-decoration none
+      
+    @media( max-height 740px )
+      margin-bottom 25px
+      
+    @media( max-height 640px )
+      margin-bottom 15px
+      
+  &__address
+    margin-bottom 55px
+    
+    @media( max-height 740px )
+      margin-bottom 25px
+      
+    @media( max-height 640px )
+      margin-bottom 15px
+    
+  &__post
+    margin-bottom 50px
+    
+    .modal & a
+      color #fff
+      text-decoration none
+      
+      &:hover,
+      &:focus,
+      &:active
+        opacity 1
+        color #fff
+        
+    @media( max-height 740px )
+      margin-bottom 25px
+      
+    @media( max-height 640px )
+      margin-bottom 15px
+        
+  &__close
+    font-size 9pt
+    
+    a
+      text-decoration none
+      
+  .modal:not(.bottom-sheet) & .modal-close
+    width auto
+    height auto
+    background none
+    position static
+    top auto
+    right auto
+    border-radius 0
+    margin 0
+    display inline-block
+  
